# Generated by Django 5.2.12 on 2026-04-06 20:44

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('api', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='MenuItem',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100)),
                ('image', models.CharField(blank=True, default='', max_length=500)),
                ('description', models.TextField(blank=True, default='')),
                ('price', models.DecimalField(decimal_places=2, max_digits=8)),
                ('is_veg', models.BooleanField(default=True)),
                ('is_available', models.BooleanField(default=True)),
                ('avg_rating', models.DecimalField(decimal_places=2, default=0.0, max_digits=3)),
                ('review_count', models.PositiveIntegerField(default=0)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='Outlet',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, unique=True)),
                ('image', models.CharField(blank=True, default='', max_length=500)),
                ('description', models.TextField(blank=True, default='')),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='FoodOrder',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.CharField(choices=[('PENDING', 'Pending'), ('ACCEPTED', 'Accepted'), ('PREPARING', 'Preparing'), ('OUT_FOR_DELIVERY', 'Out for Delivery'), ('DELIVERED', 'Delivered'), ('CANCELLED', 'Cancelled')], db_index=True, default='PENDING', max_length=20)),
                ('total_price', models.DecimalField(decimal_places=2, max_digits=10)),
                ('delivery_location', models.CharField(choices=[('hostel_1', 'Hostel 1'), ('hostel_2', 'Hostel 2'), ('hostel_3', 'Hostel 3'), ('hostel_4', 'Hostel 4'), ('hostel_5', 'Hostel 5'), ('hostel_6', 'Hostel 6'), ('hostel_7', 'Hostel 7'), ('hostel_8', 'Hostel 8'), ('hostel_9', 'Hostel 9'), ('hostel_10', 'Hostel 10'), ('hostel_11', 'Hostel 11'), ('hostel_12', 'Hostel 12'), ('hostel_13', 'Hostel 13'), ('hostel_14', 'Hostel 14'), ('hostel_15', 'Hostel 15'), ('hostel_16', 'Hostel 16'), ('hostel_17', 'Hostel 17'), ('hostel_18', 'Hostel 18'), ('hostel_19', 'Hostel 19'), ('hostel_21', 'Hostel 21'), ('tansa_house', 'Tansa House'), ('kresit', 'KReSIT'), ('sjmsom', 'SJMSOM'), ('lecture_hall', 'Lecture Hall Complex'), ('conv_hall', 'Convocation Hall'), ('main_building', 'Main Building'), ('central_lib', 'Central Library'), ('sac', 'Students Activity Centre'), ('gymkhana', 'Students Gymkhana')], max_length=50)),
                ('payment_method', models.CharField(default='COD', max_length=20)),
                ('reviewed', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='food_orders', to=settings.AUTH_USER_MODEL)),
                ('outlet', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='food_orders', to='api.outlet')),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='FoodOrderItem',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('quantity', models.PositiveSmallIntegerField()),
                ('price', models.DecimalField(decimal_places=2, max_digits=8)),
                ('order', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='order_items', to='api.foodorder')),
                ('food_item', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='order_items', to='api.menuitem')),
            ],
        ),
        migrations.AddField(
            model_name='menuitem',
            name='outlet',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='menu_items', to='api.outlet'),
        ),
        migrations.CreateModel(
            name='OutletAdmin',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('outlet', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='outlet_admins', to='api.outlet')),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='outlet_admin_profile', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Review',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('rating', models.PositiveSmallIntegerField()),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('food_item', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='reviews', to='api.menuitem')),
                ('order', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='item_reviews', to='api.foodorder')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='food_reviews', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'unique_together': {('user', 'order', 'food_item')},
            },
        ),
    ]
