# Generated by Django 5.2.13 on 2026-04-08 10:20

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('api', '0009_user_academic_profile'),
    ]

    operations = [
        migrations.CreateModel(
            name='Department',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=200)),
                ('official_contact', models.CharField(blank=True, max_length=50)),
                ('official_email', models.EmailField(blank=True, max_length=254)),
                ('location', models.CharField(blank=True, max_length=200)),
                ('maps_query', models.CharField(blank=True, help_text="Google Maps search query, e.g. 'CSE Dept IIT Bombay'", max_length=300)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='EmergencyContact',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('service_name', models.CharField(max_length=100)),
                ('contact', models.CharField(max_length=100)),
                ('order', models.PositiveSmallIntegerField(default=0, help_text='Display order (lower = shown first)')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'ordering': ['order', 'service_name'],
            },
        ),
        migrations.CreateModel(
            name='Faculty',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=200)),
                ('photo', models.ImageField(blank=True, null=True, upload_to='faculty_photos/')),
                ('department', models.CharField(db_index=True, max_length=100)),
                ('specialization', models.CharField(blank=True, max_length=200)),
                ('email', models.EmailField(blank=True, max_length=254)),
                ('cabin_no', models.CharField(blank=True, max_length=50)),
                ('is_available', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'ordering': ['department', 'name'],
            },
        ),
    ]
